Zero Problems