@@ -59,7 +59,7 @@ public class UserController extends ExceptionHandle {
 			// verifica se houve erro de validação
 			if (bindingResult.hasErrors()) {
 				String message = bindingResult.getAllErrors().get(0).getDefaultMessage();
-				String log = String.format("Erro de validação no spring validation. %s", message);
+				String log = "Erro de validação no spring validation. %s".formatted(message);
 				this.logger.error(log);
 				return Response.result(Response.error(400, "USC000", message));
 			}
@@ -67,7 +67,7 @@ public class UserController extends ExceptionHandle {
 			// delega a regra de salva para a service
 			Response resultUserSaved = this.service.save(user);
 			if(resultUserSaved != null) {
-				String message = String.format("Erro ao tentar salvar usuário. %s", resultUserSaved.toString());
+				String message = "Erro ao tentar salvar usuário. %s".formatted(resultUserSaved.toString());
 				this.logger.error(message);
 				return Response.result(resultUserSaved);
 			}
